Ensure all the content within the recent template changes section in the troubleshooting page is visible.

--- a/src/resources/postcss/tribe-common-admin.pcss
+++ b/src/resources/postcss/tribe-common-admin.pcss
@@ -3639,6 +3639,13 @@ input[type="email"].tribe-events-admin-card__input {
 	scrollbar-width: none;  /* hide scrollbar on Firefox */
 }
 
+.tribe-events-admin__recent-template-changes .template-updates-wrapper p {
+	color: #fff;
+	font-size: 14px;
+	line-height: 1.14;
+	margin: 0;
+}
+
 .tribe-events-admin__system-information-widget a {
 	color: #334aff;
 
